[tool.poetry]
name = "feature-toggle"
version = "0.1.0"
description = ""
authors = ["Ping Lin <pingli88@gmail.com>"]
readme = "README.md"
packages = [{include = "feature_toggle"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.2"
boto3 = "^1.28.2"


[tool.poetry.group.test.dependencies]
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
